<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/feature"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewC218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c218"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLecturerC218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/lecturer_c218"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_c218"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewC235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c235"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLecturerC235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/lecturer_c235"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC235"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_c235"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewC346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c346"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLecturerC346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/lecturer_c346"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC346"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_c346"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewC206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c206"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLecturerC206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/lecturer_c206"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC206"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_c206"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewG953"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/g953"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewModuleManagerG953"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_g953"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewC203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c203"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewLecturerC203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/lecturer_c203"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC203"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/manager_c203"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewC390"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:text="@string/c390"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewModuleManagerC390"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="Module Manager: Derek Lee"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>